--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
     overflow: hidden;
 }
 
@@ -12,17 +13,51 @@ html {
     background-size: cover;
 }
 
-h1 {
+#card {
+    position: absolute;
+    width: 42vh;;
+    height: 21vh;;
+    padding: 1vh;;
+    top: 6vh;
+    right: 8vw;
+    /* margin-left: -250px; */
+    background: rgb(208, 222, 233);
+    box-shadow: -20px 0 35px -25px black, 20px 0 35px -25px black;
+    z-index: 5;
+  }
+
+#card h1 {
     font-size: 4vh;
+    color: #333;
+  margin: 1vh;  
+  margin-bottom: 2vh
+  /* padding: 0; */
 }
 
-h2 {
+#card h2 {
     font-size: 3vh;
+    color: #333;
+    margin: 1vh;  
+    margin-bottom: 2vh
+  /* padding: 0; */
 }
 
-p, a {
+#card p, a {
     font-size: 2vh;
+    color: #333;
+    margin: 0 auto;  
+    margin-bottom: 2vh
+  /* padding: 0; */
 }
+#card img {
+    width: 12vh;
+    float: right;
+    border-radius: 5px;
+    margin-right: 10px;
+    -webkit-filter: sepia(0.5);
+    -moz-filter: sepia(0.5);
+    filter: sepia(0.5);
+  }
 
 .center {
     text-align: center;
